add Kafka infrastructure and configuration